[package]
name = "elgato-keylight"
description = "Elgato Key Light controller for Linux"
version = "0.1.0"
authors = ["Arnau Abella Gassol <arnau.abella@monadplus.pro>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/monadplus/elgato-keylight"
homepage = "https://github.com/monadplus/elgato-keylight"
readme = "README.md"
categories = ["gui", "cli"]
keywords = ["elgato", "keylight", "control center"]
default-run = "elgato-keylight"

[[bin]]
name = "elgato-keylight"
path = "src/bin/gui.rs"

[[bin]]
name = "elgato-keylight-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "elgato-keylight-discover"
path = "src/bin/discover.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
derive_more = "0.99.18"
eframe = "0.28.1"
egui_extras = { version = "0.28.1", features = ["all_loaders"] }
env_logger = "0.11.5"
itertools = "0.13.0"
log = "0.4.22"
regex = "1.10.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
serde_repr = "0.1.19"
strum = { version = "0.26.3", features = ["derive"] }
tempfile = "3.10.1"
thiserror = "1.0.63"
tokio = { version = "1", features = ["full"] }
url = "2.5.2"
